fix word overflowing in tasks

--- a/assets/css/webapp.scss
+++ b/assets/css/webapp.scss
@@ -295,6 +295,7 @@ main .alert {
     padding: 0.5rem;
     border-radius: 0.25rem;
     box-shadow: 0 1px 0 rgba(100, 100, 100, 0.5);
+    overflow-wrap: break-word;
 
     &:last-child {
       margin-bottom: 0
